# research-swarm

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  README.md  bootstrap.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: analyst.AGENT.md  planner.AGENT.md  researcher.AGENT.md  verifier.AGENT.md  writer.AGENT.md
api/: app.py  mcp_client.py  models.py  routes.py
frontend/: __init__.py  cli.py  cli_commands.py  cli_events.py  cli_http.py  cli_setup.py
infra/: .env.example  schema.sql
scripts/: check_providers.py  demo.sh  install_playwright.sh
services/: logging.py  qdrant_client.py  supabase_store.py
services/canvas/: interface.py  vector_engine.py
services/memory/: umem_adapter.py
services/search_tools/: searchapiio_adapter.py  tavily_adapter.py  web_fallback_adapter.py
services/swarm_engine/: __init__.py  agent_personas.py  artifact_exports.py  embeddings.py  llm.py  portfolio_engine.py  runtime.py  settings.py  state.py  swarm_config.py  tracing.py
tests/: test_cli_commands_min.py  test_cli_http.py  test_orchestration_logic.py
tools/: __init__.py  contracts.py  mcp_tools.py
